[package]
name = "bee_hive"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.68"

actix-web = { version = "4.0.0-beta.9", features = ["rustls"] }
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4", features = ["postgres", "r2d2", "uuid", "chrono", "default", "extras"] , standard-features = false}
