[package]
name = "bee_hive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
debug = 0
opt-level = 3 


[dependencies]
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.69"

actix-web = { version = "4.0.0-beta.10", features = ["rustls"] }
chrono = { version = "0.4.19", features = ["serde"] }
diesel = { version = "1.4.8", features = ["postgres", "r2d2", "uuid", "chrono", "default", "extras"] }
dotenv = "0.15.0"
actix-files = "0.6.0-beta.8"
